Fixed device fetcher mis-match data

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "better-sqlite3": "^11.8.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "tsx": "^4.7.0",
     "typescript": "^5.5.2"
   }
